--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<include layout="@layout/app_bar_layout" android:id="@+id/main_page_toolbar" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
