Save all strings in the res directory

--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -13,7 +13,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/login_screen_image" />
+        app:srcCompat="@drawable/login_screen_image"
+       />
 
     <TextView
         android:id="@+id/login_title"
@@ -21,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Welcome Aboard! "
+        android:text="@string/welcome_aboard"
         android:textColor="@color/colorPrimary"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +37,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="Please enter your Country Code \n and Phone number for verification"
+        android:text="@string/please_enter_your_country_code_n_and_phone_number_for_verification"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +53,7 @@
         android:background="@drawable/text_input_bg"
         android:ems="10"
         android:fontFamily="@font/open_sans_semibold"
-        android:hint="+961"
+        android:hint="@string/_961"
         android:inputType="number"
         android:padding="16dp"
         android:textSize="16sp"
@@ -69,7 +70,7 @@
         android:background="@drawable/text_input_bg"
         android:ems="10"
         android:fontFamily="@font/open_sans_semibold"
-        android:hint="Your Phone Number"
+        android:hint="@string/your_phone_number"
         android:inputType="phone"
         android:padding="16dp"
         android:textSize="16sp"
@@ -86,7 +87,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/primary_btn_bg"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="Sign Up"
+        android:text="@string/sign_up_login"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="16sp"
@@ -112,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="Working . . ."
+        android:text="@string/working"
         android:textColor="@android:color/holo_red_light"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
