--- a/app/src/main/res/layout/activity_verify_number.xml
+++ b/app/src/main/res/layout/activity_verify_number.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Enter Verification Code"
+        android:text="@string/enter_verification_code"
         android:textColor="@color/colorPrimary"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="We have sent you an SMS \n for phone number verification"
+        android:text="@string/we_have_sent_you_an_sms_n_for_phone_number_verification"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:background="@drawable/text_input_bg"
         android:ems="10"
         android:fontFamily="@font/open_sans_semibold"
-        android:hint="Enter Code"
+        android:hint="@string/enter_code"
         android:inputType="phone"
         android:padding="16dp"
         android:textSize="16sp"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/primary_btn_bg"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="Verify Phone Number"
+        android:text="@string/verify_phone_number"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="16sp"
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Working . . ."
+        android:text="@string/working"
         android:textColor="@android:color/holo_red_light"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
